fixed tooltip z-index issue

--- a/less/app.less
+++ b/less/app.less
@@ -62,6 +62,10 @@ a[href^="https://"] {
     line-height: 18px !important;
 }
 
+.tooltip {
+    position: fixed;
+}
+
 #bcStatus {
     width: 23px;
     height: 23px;
